---------------------------------------------------------------------------------------------------
Version: 0.9.16
Date: 01. 10. 2019
  Changed:
    - Split Landfill and Earthworks into seperate technologies so that they have better progression in the Industrial Revolution tech tree overhaul
  Removed:
    - Landfill no longer appears as dirt and instead uses the new vanilla Landfill textures
  Locales:
    - Fixes an issue with the Polish translation that was preventing the game from launching
---------------------------------------------------------------------------------------------------
Version: 0.9.15
Date: 10. 09. 2019
  Added:
    - Signal color support for Angel's Refining and Angel's Smelting modded items
    - Support for built in mod incompatibility listing
  Bugfixes:
    - Fixed an oversight when determining the minable result of trees and rocks that caused an incompatibility with Industrial Revolution mod
  Changed:
    - Sign icon selection GUI is now draggable
    - Balancing - Crafting rock and tree recipes now require all items that are returned when mining to avoid potential to get these items for free by placing and mining entities repeatedly
  Locales:
    - Updated German translation (thanks to Leridon)
    - Updated Polish translation (thanks to no_desired_username and tomplus)
---------------------------------------------------------------------------------------------------
Version: 0.9.14
Date: 03. 06. 2019
  Changed:
    - Adjusted Grid concrete textures to improve overall look (thanks to kirazy)
  Locales:
    - Updated Russian translation (thanks to 1avek1)
---------------------------------------------------------------------------------------------------
Version: 0.9.13
Date: 31. 05. 2019
  Added:
    - New Stone wall graphics including HR version (thanks to kirazy)
  Locales:
    - Updated Polish translation (thanks to Requelfade)
---------------------------------------------------------------------------------------------------