@@ -1,3 +1,4 @@
 -- data-updates
 
 require("prototypes.third-party.alien-biomes")
+require("prototypes.third-party.industrial-revolution")
