@@ -5,6 +5,8 @@ Date: 01. 10. 2019
     - Split Landfill and Earthworks into seperate technologies so that they have better progression in the Industrial Revolution tech tree overhaul
   Removed:
     - Landfill no longer appears as dirt and instead uses the new vanilla Landfill textures
+  Bugfixes:
+    - Fixes tile layering issues with Painted concrete when playing with the Industrial Revolution mod
   Locales:
     - Fixes an issue with the Polish translation that was preventing the game from launching
 ---------------------------------------------------------------------------------------------------
